<resources>
    <string name="app_name">Ruedalo Skateshop</string>
    <!-- Home Strings -->
    <string name="who_are_you">¿Quién eres?</string>
    <string name="im_user">Soy Usuario</string>
    <string name="im_admin">Soy Admin</string>
    <!-- Login Strings -->
    <string name="login">Inicia Sesión</string>
    <string name="begin_adv">y comienza la aventura</string>
    <string name="remember_me">Recuérdame</string>
    <string name="password_forgot">¿ Olvidaste la contraseña ?</string>
    <string name="init">Ingresar</string>
    <string name="still_no_account">¿ Aún no tienes cuenta ?</string>
    <string name="create_here">Créala Acá</string>

    <!-- Register Strings -->
    <string name="register_hero">BIENVENID@ AL EQUIPO</string>
    <string name="register_subtitle">Regístrate y has parte de la familia más grande del skateboarding
colombiano</string>
    <string name="terms">He leído y aceptado los </string>
    <string name="terms_condition">Términos y condiciones</string>
    <string name="register_btn_text">Unirme al Crew</string>

    <!-- Recover Strings -->
    <string name="recover_hero">¿ OLVIDASTE TU CONTRASEÑA ?</string>
    <string name="recover_subtitle">Escríbe tu correo electrónico y recibirás un código</string>
    <string name="recover_btn">Envíar Código</string>
    <string name="who_you_are">¿QUIÉN ERES?</string>
    <string name="name">nombre</string>
    <string name="welcome_text">TE DAMOS LA BIENVENIDA</string>
    <string name="welcome_team">TE DAMOS LA BIENVENIDA AL EQUIPO</string>
    <string name="lastnames">Apellidos</string>
    <string name="email">Email</string>
    <string name="tel">Teléfono</string>
    <string name="rep_password">Repetir Contraseña</string>
    <string name="read_accept">He leido y aceptado los</string>
    <string name="terms_conditions">Términos y condiciones</string>
    <string name="join_crew">unirme al crew</string>
    <string name="welcome_hero">Regístrate y has parte de la familia más grande del skateboarding colombiano</string>
    <string name="rider">Rider</string>
    <string name="passw_input">Contraseña</string>
    <string name="greetings_welcome">HOLA</string>
    <string name="applogo_string">AppLogo</string>
    <string name="app_logo_string">Logo de la app</string>
    <string name="open">Menu abierto\n</string>
    <string name="close">Menú Cerrado</string>
    <string name="fontanar_skatepark">Fontanar Skatepark</string>
    <string name="fontanar_description">Un ejemplar digno de la SLS en Bogotá</string>
    <string name="see_in_map">Ver en el mapa</string>
    <string name="places_title">¿DÓNDE SERÁ TU PRÓXIMO BEST TRICK?</string>
    <string name="tercer_milenio_skatepark">Tercer Milenio Skatepark</string>
    <string name="japon_DIY_skatepark">Japón DIY Skatepark</string>

    <!-- Key Api oAUTH -->

    <string name="api_Key">1012372663209-oaasvi5tdumltc32n3duutkaa69d6pl1.apps.googleusercontent.com</string>

    <string name="google_login">Ingresar con Google</string>
    <string name="search_prod">Busca un producto</string>
    <string name="buscar">Buscar</string>
    <string name="cat_text">Categorías</string>
    <string name="see_all">Ver todas</string>
    <string name="productos_recomendado">PRODUCTOS RECOMENDADO</string>
    <string name="productos_recomendados">PRODUCTOS RECOMENDADOS</string>
    <string name="categorias">CATEGORÍAS</string>
    <string name="skateparks_de_la_semana">SKATEPARKS DE LA SEMANA</string>
    <string name="skate_desc">Encuentra el sitio perfecto para tu próxima línea y sentirte como un pro</string>
    <string name="tercer_decrip">Sorpréndete por su versatilidad y cantidad de lugares para poner a prueba tu talento y tenacidad</string>
    <string name="japon_desc">El lugar perfecto para parchar, aprender y disfrutar de una excelente patinada junto a tu parche, un icónico skatepark</string>
    <string name="japon_desc_v2">El parche perfecto para aprender y pasarsela bien</string>

</resources>