<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/init_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="y comienza la aventura"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:background="@color/variant_white"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="123dp"
            android:src="@drawable/main_logo" />

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="223dp"
            android:layout_height="52dp"
            android:gravity="center"
            android:hint="@string/rider">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rider_field"
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:gravity="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="223dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:hint="@string/passw_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lg_password_field"
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity ="center">

            <CheckBox
                android:id="@+id/remember_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="@color/init_background"/>

        </LinearLayout>

        <TextView
            android:id="@+id/forgot_pasword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_forgot"
            android:textColor="@color/init_background"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_gravity="center"
            android:id="@+id/join_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/beige"
            android:text="@string/join_crew"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.754"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/BTgoogleLogin"
            android:layout_width="250dp"
            android:layout_height="52dp"
            android:backgroundTint="@color/white"
            android:text="@string/google_login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:cornerRadius="5dp"
            app:icon="@drawable/google_icon"
            app:iconSize="20dp"
            app:iconTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.838"
            app:strokeColor="@color/init_background"
            app:strokeWidth="2dp" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/still_no_account"/>
    <TextView
        android:id="@+id/create_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/create_here"/>



</LinearLayout>