<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/init_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp">

        <TextView
            android:layout_gravity="center"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_team"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/Iv_mainLogo"
            android:layout_width="154dp"
            android:layout_height="106dp"
            android:padding="10dp"
            android:src="@drawable/main_logo"
            android:layout_gravity="center"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_hero"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16dp"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/name"
            android:layout_marginBottom="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_field"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/lastnames"
            android:layout_marginBottom="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname_field"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/email"
            android:layout_marginBottom="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/tel"
            android:layout_marginBottom="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tel_field"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Contraseña"
            android:layout_marginBottom="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/rep_password"
            android:layout_marginBottom="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rep_password_field"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity ="center">

            <CheckBox
                android:id="@+id/terms_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_accept"
                android:textColor="@color/beige"/>
            <TextView
                android:id="@+id/terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8dp"
                android:text="@string/terms_conditions"
                android:textColor="@color/white"
                android:layout_marginLeft="2dp"/>


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_gravity="center"
            android:id="@+id/join_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/beige"
            android:text="@string/join_crew"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.754"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/textLogin"
            android:layout_gravity="center"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/beige"
            android:textAlignment="center"
            android:textSize="16dp" />

    </LinearLayout>









</ScrollView>