<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/init_background">


    <ImageView
        android:id="@+id/Home_logo"
        android:layout_width="245dp"
        android:layout_height="305dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072"
        app:srcCompat="@drawable/main_logo" />

    <TextView
        android:id="@+id/Home_mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_you_are"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/im_user"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:textColor="@color/init_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="10dp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/admin_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/beige"
        android:text="@string/im_admin"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />


</androidx.constraintlayout.widget.ConstraintLayout>