<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/variant_white"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/variant_white">
            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/buscar" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/dc_promo"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_gravity="center"
                        android:layout_height="100dp"
                        android:src="@drawable/dc_sale"
                        android:layout_marginBottom="5dp"/>

                    <ImageView
                        android:layout_width="157dp"
                        android:layout_height="99dp"
                        android:layout_gravity="center"
                        android:src="@drawable/dc_banner" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="205dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserratbold"
                        android:gravity="center"
                        android:text="@string/categorias"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="25dp" />

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="142dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:letterSpacing="0.2"
                            android:text="@string/see_all"
                            android:textAllCaps="true"
                            android:textColor="@color/init_background"
                            android:fontFamily="@font/comfortaabold"/>

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@drawable/arrow"
                            android:layout_gravity="center"/>

                    </LinearLayout>






                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="145dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cat_skate"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:layout_margin="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="124dp"
                            android:orientation="vertical">

                            <!-- Media -->

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="67dp"
                                android:layout_gravity="center"
                                android:contentDescription="skatepark Fontanar"
                                android:scaleType="centerCrop"
                                app:cornerRadius="100dp"
                                app:srcCompat="@drawable/skate" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical" />

                            <!-- Buttons -->
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:orientation="horizontal">

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/btnBoards"
                                    style="?attr/borderlessButtonStyle"
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="8dp"
                                    android:backgroundTint="@color/black"
                                    android:gravity="center"
                                    android:text="Skates"
                                    android:textAllCaps="true"
                                    android:textColor="@color/white"
                                    app:cornerRadius="10dp" />
                            </LinearLayout>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cat_ropa"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:layout_margin="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="124dp"
                            android:orientation="vertical">

                            <!-- Media -->

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="67dp"
                                android:layout_gravity="center"
                                android:contentDescription="skatepark Fontanar"
                                android:scaleType="centerCrop"
                                app:cornerRadius="100dp"
                                app:srcCompat="@drawable/ropa"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical" />

                            <!-- Buttons -->
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:orientation="horizontal">

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/btnRopa"
                                    style="?attr/borderlessButtonStyle"
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="8dp"
                                    android:backgroundTint="@color/black"
                                    android:gravity="center"
                                    android:text="Ropa"
                                    android:textAllCaps="true"
                                    android:textColor="@color/white"
                                    app:cornerRadius="10dp" />
                            </LinearLayout>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cat_Accs"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:layout_margin="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="124dp"
                            android:orientation="vertical">

                            <!-- Media -->

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="67dp"
                                android:layout_gravity="center"
                                android:contentDescription="skatepark Fontanar"
                                android:scaleType="centerCrop"
                                app:cornerRadius="100dp"
                                app:srcCompat="@drawable/varios" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical" />

                            <!-- Buttons -->
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:orientation="horizontal">

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/btnAcces"
                                    style="?attr/borderlessButtonStyle"
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="8dp"
                                    android:backgroundTint="@color/black"
                                    android:gravity="center"
                                    android:text="varios"
                                    android:textAllCaps="true"
                                    android:textColor="@color/white"
                                    app:cornerRadius="10dp" />
                            </LinearLayout>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>


                </LinearLayout>

                <!--SECTION 2 - PRODUCTS-->


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserratbold"
                    android:gravity="center"
                    android:text="@string/productos_recomendados"
                    android:textColor="@color/black"
                    android:textSize="25dp" />

                 <!--PRODUCTOS DESTACADOS-->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerInicio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"/>



                <!--CARRUSEL-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserratbold"
                    android:gravity="center"
                    android:text="@string/skateparks_de_la_semana"
                    android:textColor="@color/black"
                    android:textSize="25dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCarrusel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    android:clipToPadding="false"
                    android:layout_marginBottom="25dp"/>


            </LinearLayout>



        </LinearLayout>

    </LinearLayout>



</ScrollView>